<resources>
    <string name="app_name">LubankApp</string>
    <string name="app_icon_desc">Logo do aplicativo</string>

    <string name="id_doc_label">Documento de Identificação</string>
    <string name="id_doc_hint">CPF</string>
    <string name="password_label">Senha</string>
    <string name="password_hint">********</string>
    <string name="login_btn_label">Login</string>
    <string name="id_company_doc">CNPJ</string>

    <string name="icon_desc">Icone de usuário</string>
    <string name="txt_username">Olá, Luigi!</string>

    <string name="txt_account_balance">Conta \n \n R$ 0,00</string>

    <string name="txt_cards">Meus cartões</string>
    <string name="txt_extract">Extrato</string>

    <string name="title_under_development">Funcionalidade em desenvolvimento!</string>
    <string name="txt_under_development">No momento, nosso time está trabalhando \n nesta funcionalidade.</string>

    <string name="btn_return">Voltar</string>

    <string name="register_title">Registre-se</string>
    <string name="name_label">Nome</string>
    <string name="email_label">Email</string>

    <string name="deposit_verify_information">Confira as informações abaixo para gerar seu boleto bancário:</string>
    <string name="deposit_due_dates">Lembre-se: O valor fica disponível na sua carteira em até 2 dias úteis (finais de semana e feriados não contam)</string>
</resources>