<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#E3F2FD">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_under_development"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/underDevelopmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_under_development"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/underDevelopmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_under_development"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="80dp"/>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        android:backgroundTint="@color/boeing_blue"
        android:textColor="@color/white"/>
</LinearLayout>
