<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="4dp"
            android:text="@string/id_doc_label"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/govRegCode_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/id_doc_hint"
            android:inputType="number"
            android:maxLength="14"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroupCpfCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:gravity="start"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/id_doc_hint"
                android:textColor="@color/black"
                app:buttonTint="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonCnpj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_company_doc"
                android:textColor="@color/black"
                app:buttonTint="@color/black" />
        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>