<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/air_force_blue">

        <View
            android:id="@+id/containerCircle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/container_circle"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="@id/containerCircle"
            app:layout_constraintStart_toStartOf="@id/containerCircle"
            app:layout_constraintEnd_toEndOf="@id/containerCircle"
            app:layout_constraintBottom_toBottomOf="@id/containerCircle"
            android:contentDescription="@string/icon_desc"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/containerCircle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            app:layout_constraintStart_toEndOf="@id/containerCircle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="230dp"
            android:layout_marginTop="40dp"/>

        <ImageView
            android:id="@+id/ic_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question"
            app:layout_constraintStart_toEndOf="@id/ic_eye"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/txt_account_balance"
        android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewActions"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</LinearLayout>